# ydns-py

./: .gitignore  CHANGELOG.md  README.md  prek.toml  pyproject.toml
src/ydns_py/: __init__.py
